[project]
name = "mujinwebstackclient"
dependencies = [
    "six~=1.16",
    "requests~=2.32.2",
    "typing_extensions~=4.2",
    "websockets~=15.0",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
graphql = [
    "graphql-core~=3.2.0",
]

[tool.setuptools]
packages = ["mujinwebstackclient"]

[tool.setuptools.package-dir]
mujinwebstackclient = "python/mujinwebstackclient"

[tool.setuptools.package-data]
mujinwebstackclient = ["py.typed"]

[tool.setuptools.data-files]
bin = [
    "bin/mujin_webstackclientpy_applyconfig.py",
    "bin/mujin_webstackclientpy_runshell.py",
    "bin/mujin_webstackclientpy_downloaddata.py",
]

[tool.setuptools.dynamic]
version = {attr = "python.mujinwebstackclient.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
